<resources>
    <string name="app_name">Owlx</string>
    <string name="input_login_hint">E-mail</string>
    <string name="input_password_hint">Senha</string>
    <string name="login_title">Log-in</string>
    <string name="nova_conta">Nova Conta</string>
    <string name="esquecer_senha">Esqueceu sua senha?</string>
    <string name="signin_title">Cadastro</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="input_name_hint">Nome</string>
    <string name="fazer_login">Fazer login</string>
    <string name="you_made_it_through_TEST">You made it through! You must be a really good hacker.</string>
    <string name="logout_TEST">Logout</string>
    <string name="forgot_password_title">Recuperação de Senha</string>
    <string name="recuperar">Recuperar</string>
    <string name="forgot_password_message">Insira seu e-mail e te enviaremos uma mensagem para alteração de sua senha</string>
    <string name="home">Home</string>
    <string name="perfil">Minha Conta</string>
    <string name="options">Opções</string>
    <string name="user_item_menu">Usuário</string>
    <string name="log_out">log-out</string>
    <string name="communication_item_menu">Comunicação</string>
    <string name="mensagens">Mensagens</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="submit">submit</string>
    <string name="description">Descrição</string>
    <string name="price">Preço</string>
    <string name="add_product">Anunciar Produto</string>
    <string name="select_image">Selecionar imagem</string>
    <string name="welcome">Bem-vindo, %1$s!</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="needs">Este app precisa da sua localização para funcionar corretamente!</string>
    <string name="localization">Longitude: %1$s,\nLatitude: %2$s.</string>
    <string name="local_teste">Local/Distância</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buy_btn">Negociar</string>
    <string name="update_btn">Atualizar</string>
    <string name="my_products">Meus Produtos</string>
    <string name="delete">Deletar</string>
</resources>