<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/options"/>

    <item android:title="@string/user_item_menu">

        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_account_box_24"
                android:title="@string/perfil"/>

            <item
                android:id="@+id/nav_my_products"
                android:icon="@drawable/baseline_my_products_24"
                android:title="@string/my_products"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out"/>

        </menu>

    </item>

    <item android:title="@string/communication_item_menu">

        <menu>

            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/baseline_message_24"
                android:title="@string/mensagens"/>

        </menu>

    </item>

</menu>