<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_start_menus"
    android:padding="48dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/dark_cyan"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgot_password_title"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgot_password_message"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/light_grey"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login_hint"
                app:boxBackgroundColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/dark_cyan">

                <EditText
                    android:id="@+id/input_forgot_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="@color/light_pink"
                    android:textColor="@color/dark_cyan"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_recuperar_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recuperar"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:backgroundTint="@color/light_cyan"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>