<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:gravity="center"
    android:background="@drawable/bg_start_menus"
    android:padding="48dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/dark_cyan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_title"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login_hint"
                app:boxBackgroundColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/dark_cyan">

                <EditText
                    android:id="@+id/input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="@color/light_pink"
                    android:textColor="@color/dark_cyan"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password_hint"
                app:boxBackgroundColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/dark_cyan">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHighlight="@color/light_pink"
                    android:textColor="@color/dark_cyan"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/btn_esquecer_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/esquecer_senha"
                    android:textColor="@color/white"
                    android:gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:backgroundTint="@color/light_cyan"
                    android:textColor="@color/white"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_criar_conta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nova_conta"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:backgroundTint="@color/light_cyan"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>