<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product.MyProductActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_start_menus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/invisible_button"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:drawableTint="@color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/dark_cyan">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:hint="Nome do Produto"
                        app:boxBackgroundColor="@color/white"
                        android:textColorHint="@color/dark_cyan"
                        android:layout_weight="8"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxStrokeWidth="0dp">

                        <EditText
                            android:id="@+id/input_name_product"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColorHighlight="@color/light_pink"
                            android:textColor="@color/dark_cyan" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        app:boxBackgroundColor="@color/white"
                        android:textColorHint="@color/dark_cyan"
                        android:layout_weight="2"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxStrokeWidth="0dp">

                        <EditText
                            android:id="@+id/input_price_product"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:textColorHighlight="@color/light_pink"
                            android:textColor="@color/dark_cyan"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border_linear">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border_linear">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/description"
                        app:boxBackgroundColor="@color/white"
                        android:textColorHint="@color/dark_cyan"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxStrokeWidth="0dp">

                        <EditText
                            android:id="@+id/input_description_product"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:textColorHighlight="@color/light_pink"
                            android:textColor="@color/dark_cyan"
                            android:gravity="start"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/delete_product_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:backgroundTint="#e40000"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_marginEnd="16dp"/>

                    <Button
                        android:id="@+id/update_product_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_btn"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:backgroundTint="@color/light_cyan"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_marginStart="16dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>